--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 Se caracteriza por que la persona tiene una imagen corporal distorsionada y miedo injustificado a subir de peso. 
 </p>
 
-<img src= "https://as.com/deporteyvida/imagenes/2017/05/28/portada/1495972674_911618_1495973623_noticia_normal.jpg" width= 300/>
+<img src= "https://as.com/deporteyvida/imagenes/2017/05/28/portada/1495972674_911618_1495973623_noticia_normal.jpg" alt="Imagen que representa la anorexia" title="Imagen que representa la anorexia" width= 300/>
 
 <h2> ¿Como ayudar a alguien que tiene anorexia?</h2>
 <ul>
