--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@ Se caracteriza por que la persona tiene una imagen corporal distorsionada y mied
 
 <h3>Si tenes o sospechas que alguien sufre de este trastorno contacta con CEDA, una asociacion especializada en desordenes alimentarios: 0800 888 2944 </h3>
 <a href="0800 888 2944> LLAMAR </a>
-
+<a target="_blank" href="https://www.cedaonline.com.ar/ Pagina de la asociacion"> </a>
 </body>
 </html>
